# servers

./: Cargo.toml  README.md  angular.json  index.html  karma.conf.js  package-lock.json  package.json  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/monoglu_webapp/: MainActivity.kt
cs/: Cargo.toml
cs/benches/: parse.rs
cs/src/: config.rs  lib.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
message/: Cargo.toml
message/src/: custom.rs  errors.rs  lib.rs
service-worker/: Cargo.toml
service-worker/src/: configs.rs  lib.rs  main.rs
service-worker/src/data/: keys.rs  mod.rs
src/: index.html  lib.rs  main.rs
src/app/: app.component.spec.ts  app.component.ts
src/features/: mod.rs
template/: Cargo.toml
template/src/: configs.rs  lib.rs  main.rs
test/: widget_test.dart
test-client/: Cargo.toml
test-client/src/: main.rs
test-server/: Cargo.toml
test-server/src/: config.rs  data.rs  lib.rs  main.rs  message.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
