[package]
name = "monoglu_webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19.0"
ehttp = "0.2.0"
serde = { version = "1", features = ["derive"] }
tracing-wasm = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm