[package]
name = "service-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4"
actix-ws = "0.2.5"
chrono = "0.4"
futures = "0.3"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
toml = "0.4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }